add: tags, hook 추가, 컴포넌트 이름 변경

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .App {
-  width: 400px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+  width: 100%;
+  padding: 10px;
+  gap: 30px;
 }
